--- a/DockerFile
+++ b/DockerFile
@@ -1,14 +1,5 @@
 # Use the official Python image
-FROM python:3.10-bullseye
-
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    gcc \
-    libpq-dev \
-    libjpeg-dev \
-    zlib1g-dev \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+FROM python:3.10.9
 
 # Set the working directory
 WORKDIR /app
@@ -16,7 +7,7 @@ WORKDIR /app
 # Copy the requirements file
 COPY requirements.txt .
 
-# Install Python dependencies
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of your application code
