--- a/requirements.txt
+++ b/requirements.txt
@@ -1,79 +1,155 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
 annotated-types==0.7.0
-anyio==4.6.0
+anyio==4.7.0
 appnope==0.1.4
-asttokens==2.4.1
+asttokens==3.0.0
 async-timeout==4.0.3
+attrs==23.2.0
+Authlib==1.4.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.5.0
-certifi==2024.8.30
-charset-normalizer==3.3.2
-click==8.1.7
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.1
+click==8.1.8
 comm==0.2.2
-debugpy==1.8.6
+cryptography==44.0.0
+db-dtypes==1.2.0
+debugpy==1.8.11
 decorator==5.1.1
 distro==1.9.0
+dnspython==2.6.1
+email_validator==2.1.1
+et-xmlfile==1.1.0
 exceptiongroup==1.2.2
 executing==2.1.0
+fastapi==0.115.6
+fastapi-cli==0.0.4
 Flask==3.0.3
-Flask-Cors==5.0.0
-google-api-core==2.21.0
-google-auth==2.35.0
+Flask-Cors==4.0.1
+frozendict==2.4.4
+frozenlist==1.4.1
+gitdb==4.0.11
+gitignore_parser==0.1.11
+GitPython==3.1.43
+google==3.0.0
+google-api-core==2.19.0
+google-api-python-client==2.132.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
+google-cloud-bigquery==3.24.0
 google-cloud-core==2.4.1
-google-cloud-secret-manager==2.20.2
 google-cloud-storage==2.18.2
-google-crc32c==1.6.0
+google-crc32c==1.5.0
 google-resumable-media==2.7.2
-googleapis-common-protos==1.65.0
-grpc-google-iam-v1==0.13.1
-grpcio==1.66.2
-grpcio-status==1.66.2
+googleapis-common-protos==1.63.1
+grpcio==1.64.1
+grpcio-status==1.62.2
 h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.2
+html2text==2024.2.26
+html5lib==1.1
+httpcore==1.0.7
+httplib2==0.22.0
+httptools==0.6.1
+httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
-ipython==8.28.0
+ipython==8.31.0
 itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jiter==0.5.0
+jedi==0.19.2
+Jinja2==3.1.5
+jiter==0.9.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
-MarkupSafe==2.1.5
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+multidict==6.0.5
+multitasking==0.0.11
 nest-asyncio==1.6.0
-openai==1.47.0
-packaging==24.1
+numpy==1.26.4
+oauth2client==4.1.3
+oauthlib==3.2.2
+openai==1.74.1
+openpyxl==3.1.2
+orjson==3.10.3
+packaging==24.2
+pandas==2.2.3
 parso==0.8.4
+peewee==3.17.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.6
+plotly==5.24.1
 prompt_toolkit==3.0.48
-proto-plus==1.24.0
-protobuf==5.28.2
-psutil==6.0.0
+proto-plus==1.23.0
+protobuf==4.25.4
+psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pydantic==2.9.2
-pydantic_core==2.23.4
+pyarrow==15.0.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.10.4
+pydantic_core==2.27.2
+pydeck==0.9.1
 Pygments==2.18.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.20
 pytz==2024.2
+PyYAML==6.0.1
 pyzmq==26.2.0
 redis==5.0.8
+referencing==0.35.1
 requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.7.1
+rpds-py==0.19.0
 rsa==4.9
-six==1.16.0
+shellingham==1.5.4
+simplegmail==4.1.1
+six==1.17.0
+smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.5
 spotipy==2.24.0
+sssss==0.1.2
 stack-data==0.6.3
-tornado==6.4.1
-tqdm==4.66.5
+starlette==0.41.3
+streamlit==1.36.0
+tenacity==9.0.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.2
+tqdm==4.66.4
 traitlets==5.14.3
+typer==0.12.3
 typing_extensions==4.12.2
-urllib3==2.2.3
+tzdata==2024.2
+ujson==5.10.0
+uritemplate==4.1.1
+urllib3==2.3.0
+uvicorn==0.34.0
+uvloop==0.19.0
+watchdog==3.0.0
+watchfiles==0.22.0
 wcwidth==0.2.13
+webencodings==0.5.1
+websockets==12.0
 Werkzeug==3.0.4
+writer==0.8.2
+writer-sdk==1.6.1
+yarl==1.9.4
+yfinance==0.2.43
+zenpy==2.0.56
